<resources>
    <string name="app_name" translatable="false">The Book Heaven</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="enter" translatable="false">Enter</string>
    <string name="Login" translatable="false">Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="Back">back</string>
    <string name="welcome_to_the_book_heaven">Welcome to the Book Heaven</string>
    <string name="welcome_nto_nthe_book_heaven">Welcome\nto\nThe Book Heaven</string>
    <string name="book_heaven">Book Heaven</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_name">Enter your full name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_date_of_birth_dd_mm_yy">Select your date of birth (dd/mm/yy)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="mobile">Mobile</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="click_here">Click here</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="add_your_book">Add your book</string>
    <string name="add_category">Add Category</string>
    <string name="the_book_heaven">The Book Heaven</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="search_books_by_title_or_author">Search books by title or author</string>
    <string name="search">Search</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_book">Add Book</string>
    <string name="welcome_nto_nthe_admin_panel">Welcome to\nthe\nAdmin Panel</string>
    <string name="update_books">Update Books</string>
    <string name="view_books">View Books</string>
    <string name="delete_books">Delete Books</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="book_details">Book details</string>
    <string name="book_id">Book ID:</string>
    <string name="delete">Delete</string>
    <string name="delete_book">Delete Book</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="wishlist">Wishlist</string>
    <string name="user_profile">User Profile</string>
    <string name="edit_profile1">Edit Profile</string>


</resources>