<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

      <TextView
          android:id="@+id/textView_register_head"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/sign_up"
          android:textStyle="bold"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Headline"

         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_register_name"
        android:layout_below="@id/textView_register_head"
        android:text="@string/full_name"
        android:textColor="@color/sky_blue"
        android:padding="6dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_register_full_name"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:padding="8dp"
        android:backgroundTint="#DDD7D7"
        android:layout_below="@+id/textView_register_name"
        android:background="@drawable/border"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_email"
            android:text="@string/Email"
            android:layout_below="@id/et_register_full_name"
            android:textColor="@color/sky_blue"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_email"
            android:hint="@string/enter_your_email"
            android:backgroundTint="#DDD7D7"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_below="@+id/textView_register_email"
            android:background="@drawable/border"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_Phone"
            android:text="@string/mobile"
            android:layout_below="@id/et_register_email"
            android:textColor="@color/sky_blue"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_phone_number"
            android:hint="@string/your_number"
            android:backgroundTint="#DDD7D7"
            android:inputType="phone"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_below="@+id/textView_register_Phone"
            android:background="@drawable/border"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_date_of_birth"
            android:text="@string/date_of_birth"
            android:layout_below="@id/et_register_phone_number"
            android:textColor="@color/sky_blue"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_data_of_birth"
            android:hint="@string/enter_your_date_of_birth_dd_mm_yy"
            android:inputType="date"
            android:backgroundTint="#DDD7D7"
            android:focusable="false"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_below="@+id/textView_register_date_of_birth"
            android:background="@drawable/border"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_gender"
            android:text="@string/gender"
            android:layout_below="@id/et_register_data_of_birth"
            android:textColor="@color/sky_blue"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />
       <RadioGroup
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_below="@id/textView_register_gender"
           android:id="@+id/radio_group_register_gender">
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/radio_male"
               android:text="@string/male"
               android:textSize="16sp"
               android:textColor="@color/black"/>
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/radio_female"
               android:text="@string/female"
               android:layout_marginLeft="20dp"
               android:textSize="16sp"
               android:textColor="@color/black"
               />
       </RadioGroup>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/textView_register_password"
               android:text="@string/password"
               android:layout_below="@id/radio_group_register_gender"
               android:textColor="@color/sky_blue"
               android:padding="8dp"
               android:textSize="16sp"
               android:layout_marginTop="10dp" />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/et_register_password"
               android:hint="@string/enter_your_password"
               android:inputType="textPassword"
               android:backgroundTint="#DDD7D7"
               android:textSize="16sp"
               android:padding="8dp"
               android:layout_below="@id/textView_register_password"
               android:background="@drawable/border"
               />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_confirm_password"
            android:text="@string/confirm_password"
            android:layout_below="@id/et_register_password"
            android:textColor="@color/sky_blue"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_confirm_password"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:backgroundTint="#DDD7D7"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_below="@+id/textView_register_confirm_password"
            android:background="@drawable/border"
            />
        <Button
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_register_confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/register"
            android:backgroundTint="@color/sky_blue"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>




    </RelativeLayout>




</ScrollView>
