<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddBookActivity">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/textView_book_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_id"
        android:inputType="number"
        android:textStyle="bold"
        android:visibility="gone"
        tools:ignore="TextViewEdits" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/book_details"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- EditText for Book Title -->
    <EditText
        android:id="@+id/editText_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <!-- EditText for Book Author -->
    <EditText
        android:id="@+id/editText_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <!-- EditText for Book Genre -->
    <EditText
        android:id="@+id/editText_book_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genre"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <!-- EditText for Book Description -->
    <EditText
        android:id="@+id/editText_book_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <!-- ProgressBar (for loading indication) -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <!-- Button to Add Book -->
    <Button
        android:id="@+id/button_addBook"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/add_book"
        android:backgroundTint="@color/sky_blue" />

</LinearLayout>
