<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <EditText
        android:id="@+id/editText_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editText_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editText_book_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genre"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editText_book_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:layout_marginTop="10dp"/>
</LinearLayout>
