<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">
    <TextView
        android:id="@+id/textView_register_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_profile1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"

        />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/edit_text" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:padding="12dp"

        android:background="@color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />
</LinearLayout>