<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView_login_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_head"
            android:layout_marginTop="20dp"
            android:text="@string/Email"
            android:textColor="@color/sky_blue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_email"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:backgroundTint="#DDD7D7" />

        <TextView
            android:id="@+id/textView_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_login_email"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/sky_blue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_password"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:backgroundTint="#DDD7D7" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_login_password"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:backgroundTint="@color/sky_blue" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />

        <!-- Button to navigate to Admin Panel -->
        <Button
            android:id="@+id/button_admin_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_panel"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/lime"
            android:visibility="gone" /> <!-- Initially set to gone -->

    </RelativeLayout>
</ScrollView>
