<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".First_pageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:padding="20dp">




        <TextView
            android:id="@+id/textView_main_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/welcome_nto_nthe_book_heaven"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <Button
            android:id="@+id/button_admin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_main_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Admin Account Create"
            android:backgroundTint="@color/sky_blue"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_admin_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="70dp"
            android:text="@string/login"
            android:backgroundTint="@color/sky_blue"/>

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_marginTop="-50dp"
            android:text="@string/do_not_have_an_account"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView_register"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:text="@string/register"
            android:backgroundTint="@color/sky_blue"
            />

    </RelativeLayout>

</ScrollView>